# ttc

./: .dockerignore  .env  .gitignore  .gitmodules  .tmuxinator.docker.yml  .tmuxinator.yml  Cargo.toml  Makefile  README.md  docker-compose.yml  terraform.tfstate
.github/actions/install-risc0/: action.yml
.github/workflows/: ci.yml  lint.yml  node_test.yml
contract/: Cargo.toml  foundry.toml
contract/script/: Deploy.s.sol
contract/src/: MockVerifier.sol  TestNFT.sol  TopTradingCycle.sol  Verifier.sol  lib.rs  mock_verifier.rs  nft.rs  ttc.rs  verifier.rs
contract/src/interface/: ITopTradingCycle.sol
contract/src/verifier/: MockVerifier.sol  Verifier.sol
contract/tests/: ttc_test.rs
contracts/: TopTradingCycle.sol
docker/anvil/: Dockerfile
docker/monitor-server/: Dockerfile
docker/prover-server/: Dockerfile  Dockerfile.cuda
docker/prover-server-cuda/: Dockerfile
docker/servers/: Dockerfile
docs/: README.md
host/: Cargo.toml
host/src/: actor.rs  checkpoint.rs  cli.rs  deployer.rs  env.rs  gas_metrics.rs  lib.rs  main.rs  prover.rs
host/src/contract/: mod.rs  nft.rs  ttc.rs  verifier.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml  build.rs
methods/guest/src/: main.rs
monitor/: Cargo.toml
monitor/api/: Cargo.toml
monitor/api/src/: rpc.rs  types.rs
monitor/contract/: .gitignore
monitor/server/: Cargo.toml  build.rs
monitor/server/src/: app_config.rs  app_env.rs  db.rs  events_manager.rs  lib.rs  main.rs  pg_notify.rs  prover.rs  ttc_contract.rs  utils.rs
monitor/server/src/db/: notify.rs
monitor/server/src/monitor/: events_manager.rs  mod.rs
monitor/server/src/prover/: db.rs  local.rs  mod.rs  remote.rs  rpc.rs  types.rs
monitor/src/: db.rs  env.rs  event.rs  lib.rs  pg_notify.rs  rpc.rs  ttc_contract.rs
monitor/src/db/: mod.rs
monitor/src/monitor/: db.rs  mod.rs  types.rs
monitor/src/prover/: local.rs
prover/: Cargo.toml
prover/server/: Cargo.toml
prover/server/src/: app_env.rs  db.rs  env.rs  lib.rs  main.rs  prover.rs
prover/src/: prover.rs  rpc.rs
src/: lib.rs  strict.rs
terraform/: .gitignore  README.md  SETUP.md  cloudrun.tf  compute.tf  database.tf  iam.tf  main.tf  monitor.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  vpc.tf
terraform/scripts/: migrate.sh  setup-local.sh  setup-prover.sh
ttc/: Cargo.toml
ttc-contract/: Cargo.toml  foundry.toml
ttc-contract/src/: TestNFT.sol  TopTradingCycle.sol  lib.rs  main.rs  nft.rs  ttc.rs
ttc-contract/tests/: ttc_test.rs
ttc/src/: strict.rs
