[workspace]
resolver = "3"
members = [
    "ttc", 
    "contract", 
    "host", 
    "methods"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
itertools = "0.14.0"
petgraph = { version = "0.7.1", default-features = false }
proptest = "1.6.0"
thiserror = "2.0"

risc0-build = { version = "1.2", default-features = false }
risc0-zkp =   { version = "1.2", default-features = false }
risc0-zkvm =  { version = "1.2" }

risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.3.2", features = ["unstable-verifier"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.3.2" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.3.2" }

ttc = { path = "ttc" }
contract = { path = "contract" }
ttc-methods = {path = "methods" }
