[workspace]
resolver = "3"
members = [
    "ttc", 
    "methods",
    "monitor/api",
    "monitor/server",
    "host"
  ]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
alloy = "0.9.2"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"
itertools = "0.14.0"
jsonrpsee = "0.22"
petgraph = { version = "0.7.1", default-features = false }
proptest = "1.6.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "chrono", "uuid"] }
thiserror = "2.0"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "ansi", "env-filter", "fmt", "time" ] }
url = { version = "2.5" }

risc0-build = { version = "1.2", default-features = false }
risc0-zkp =   { version = "1.2", default-features = false }
risc0-zkvm =  { version = "1.2" }

risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.3.2", features = ["unstable-verifier"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.3.2" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.3.2" }

ttc = { path = "ttc" }
methods = {path = "methods" }
monitor-server = {path = "monitor/server"}
monitor-api = {path = "monitor/api"}

