[package]
name = "host"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
proptest.workspace = true
time.workspace = true
tokio = { version = "1.35", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url = { version = "2.5" }


risc0-ethereum-contracts.workspace = true
risc0-steel = { workspace = true, features = ["host"]}
risc0-zkvm = { workspace = true }

ttc = { workspace = true, features = ["test"] }
ttc-methods.workspace = true