[package]
name = "host"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
jsonrpsee = {workspace = true, features = ["client"]}
proptest.workspace = true
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

risc0-steel = { workspace = true, features = ["host"]}

ttc = { workspace = true, features = ["test"] }
monitor-api.workspace = true

[[bin]]
name = "deploy"
path = "bin/deploy.rs"  

[[bin]]
name = "demo"
path = "bin/demo.rs"  