[package]
name = "ttc-methods"
version = { workspace = true }
edition = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
risc0-build = { workspace = true, features = ["unstable"] }
risc0-build-ethereum = { workspace = true }
risc0-zkp = { workspace = true }

[dev-dependencies]
risc0-zkvm = { workspace = true }