[package]
name = "prover"
version.workspace = true
edition.workspace = true

[dependencies]

anyhow.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, features = ["client", "macros", "server"] }
serde.workspace = true
# time.workspace = true
tokio.workspace = true
tracing.workspace = true
# tracing-subscriber.workspace = true
url = { version = "2.5" }


risc0-ethereum-contracts.workspace = true
risc0-steel = { workspace = true, features = ["host"]}
risc0-zkvm = { workspace = true }

ttc = { workspace = true }
methods.workspace = true