[package]
name = "ttc-contract"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = "2.0"
serde = "1.0"

[dev-dependencies]
eyre = "0.6"
futures = "0.3"
proptest = "1.6.0"
rand = "0.9"
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
ttc = {path = "../ttc", features = ["test"] }