[package]
name = "ttc-contract"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = "2.0"
serde = "1.0"

[dev-dependencies]
eyre = "0.6"
futures = "0.3"
proptest = "1.6.0"
tokio = { version = "1.0", features = ["full"] }
ttc = {path = "../ttc", features = ["test"] }

[features]
node_test = []