[package]
name = "ttc"
version = { workspace = true }
edition = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
petgraph.workspace = true
proptest = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
itertools.workspace = true

[features]
test = ["proptest"]