[package]
name = "ttc-guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "provable_ttc"
path = "src/main.rs"

[workspace]

[dependencies]
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.4.0-rc.1", features = ["unstable-verifier"] }
risc0-zkvm = { git = "https://github.com/risc0/risc0", version = "1.3.0-alpha.1", default-features = false, features = ["std", "unstable"] }
ttc = { path = "../../ttc" }
hashbrown = "0.14"
alloy-primitives = { version = "0.8" }
alloy-sol-types = { version = "0.8" , features = ["json"] }



[patch.crates-io]
# enable RISC Zero's precompiles
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }