[package]
name = "monitor-server"
version.workspace = true
edition.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
jsonrpsee = {workspace = true, features = ["client", "macros", "server"]}
monitor-common.workspace = true
prover-common.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[[bin]]
name = "create-db"
path = "bin/create_db.rs"  

[[bin]]
name = "create-schema"
path = "bin/create_schema.rs"  
