[package]
name = "monitor-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
jsonrpsee = {workspace = true, features = ["client", "macros", "server"]}
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

risc0-steel = { workspace = true, features = ["host"]}
risc0-ethereum-contracts = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, optional = true }

methods = {workspace = true, optional = true}
monitor-api.workspace = true

[features]
default = []
local_prover = ["dep:risc0-ethereum-contracts", "dep:risc0-zkvm", "dep:methods"]
cuda = ["risc0-zkvm/cuda"]

[[bin]]
name = "create-db"
path = "bin/create_db.rs"  

[[bin]]
name = "create-schema"
path = "bin/create_schema.rs"  

[[bin]]
name = "prover-server"
path = "bin/prover_server.rs"  
required-features = ["local_prover"]