[package]
name = "prover-server"
version.workspace = true
edition.workspace = true

[dependencies]

anyhow.workspace = true
clap.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, features = ["server"] }
serde.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

risc0-ethereum-contracts.workspace = true
risc0-steel = { workspace = true, features = ["host"]}
risc0-zkvm = { workspace = true }

ttc = { workspace = true }
methods.workspace = true
prover-common.workspace = true